tests/checker/diagnostics/0070_core_match_branch_mismatch_06.ml.infer.expected
File "0070_core_match_branch_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0070_core_match_branch_mismatch_06 is not a valid module name.

File "0070_core_match_branch_mismatch_06.ml", line 4, characters 13-18:
4 |   | false -> false
                 ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
