tests/checker/diagnostics/0070_core_match_branch_mismatch_06.ml
let _ =
  match false with
  | true -> 5
  | false -> false
